# task-rust

./: Cargo.toml  README.md
src/: datos.json  main.rs
src/format/: ui.rs
src/task/: crud.rs  local_store.rs  mod.rs
tests/: crud_test.rs  local_store_test.rs
