[package]
name = "task-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.49", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0.145"
cli-table = {version = "0.5.0", features = ["derive"]}
chrono = "0.4.42"
anyhow = "1.0.100"
uuid = {version = "1.18.1", features = ["v4"]}
tempfile = "3.23.0"
